dotCMS/core#11196: Adjusted Jenkins scripts releases (11)